# factchain-community

./: .gitignore  .gitmodules  LICENSE.md  README.md
.github/workflows/: backend-deploy.yml  build-extension.yml  contracts-code-checks.yml  contracts-deploy-sepolia.yml  deploy-factchain1155-contract.yml  deploy-main-contract.yml  deploy-nft-contract.yml  deploy-proxy-contract.yml  deploy-sft-contract.yml  deploy-x-community-notes-contract.yml  extension-code-checks.yml  extension-pack.yml  indexer-deploy.yml  tm-community-contracts-ci.yml
backend/: test.env
contracts/: .pdm-python  .pre-commit-config.yaml  pyproject.toml  truemint.vy
fc-community-contracts/: README.md  foundry.toml  remappings.txt
fc-community-contracts/src/: FactChain1155.sol  FactChainCommunity.sol  FactChainNFT.sol  FactChainSFT.sol  FactchainCommunity.sol  FactchainCommunityProxy.sol  FactchainNFT.sol  FactchainNFTProxy.sol  FactchainProxy.sol  FactchainSFT.sol  FactchainSFTProxy.sol  XCommunityNotes.sol  XCommunityNotesProxy.sol
fc-community-contracts/test/: FactChain1155.t.sol  FactChainCommunity.t.sol  FactChainNFT.t.sol  FactchainCommunity.t.sol  FactchainNFT.t.sol  FactchainSFT.t.sol  Ownable.t.sol  XCommunityNotes.t.sol
fc-community-extension/: README.md  factchain-extension-build.crx  package.json  pnpm-lock.yaml  tailwind.config.js
fc-community-extension/config/: webpack.common.js  webpack.config.js
fc-community-extension/public/: popup.html  (+5 more)
fc-community-indexer/: README.md  package.json
tm-community-contracts/: README.md
tm-community-extension/: README.md  manifest.json
(+183 files in other folders)
