[project]
name = "truemint-smart-contracts"
version = ""
description = "Smart Contracts written in vyper for the truemint community"
authors = [
    {name = "Pierre Hay", email = "hay.pierre.pro@gmail.com"},
    {name = "Yacine Badiss", email = "yacine.badiss@gmail.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">3.10,<3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]

dependencies = [
    "vyper==0.3.7",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm.dev-dependencies]
test = [
    "pytest==6.2.5",
    "pytest-sugar>=0.9.5",
    "pytest-cov>=3.0.0",
    "eth-brownie==1.19.3",
]
lint = [
    "black==22.10.0",
    "mypy",
    "ruff>=0.0.270",
    "types-PyYAML",
]
doc = [
    "mike",
    "emotional",
]
release = [
    "emotional",
]

[tool.pdm.scripts]
test.help = "Run the test suite"
test.cmd = "pytest"

lint.help = "Lint all tracked files using pre-commit"
lint.cmd = "pre-commit run --all-files"
